2008-05-01  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tcljob.c: Fixed deadlock in job thread caused
	by obscure locking strategy of the existing code.
	Also, did some cosmetic changes on variables.

	* nsd/log.c: Fixed tramping over freed memory in
	LogFlush() when last cache entry has been processed
	and the server is shutting down, tearing the cache down.

2008-04-29  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/log.c: LogToTcl: short-circuit for Fatal severity
	otherwise we may get stucked in the depths of the memalloc.

	* nsd/tcljob.c: Fixed wrong access to queuePtr variable
	in the worker thread (Bug introduced 2008-04-26). Made 
	LookupQueue errors trigger Fatal exceptions when run 
	from within the worker threads.

2008-04-27  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/driver.c: back-off send/recv buffer change as it aparently
	works at least on one platform (Linux)

2008-04-26  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tcljob.c: Cancelled jobs are now cancelled _properly_ by means
	of Tcl_AsyncAlert() mechanism.  Job record as reported by the
	[ns_job joblist] contains the thread ID suitable for passing to the
	[loopctl] facility for finer-grained control.

	* nsd/driver.c: Socket send/recv buffer setup moved to NsStartDrivers()
	and commented as real NO-OP, as too late in the startup sequence.
	TCP honours the buffer-size setup prior to listen() or connect() only.
	Without significant API plumbing, the per-driver values for send and
	receive buffers are just useless.

	* nsd/tclobj.c: Changed Tcl handle format to include hyphens ("-")
	instead of spaces, as spaces create troubles with Tcl [eval].

2008-04-09  Vlad Seryakov <seryakov@users.sf.net>

	* include/nsthread.h: Added definition of LLONG_MAX for old gcc versions

2008-03-26  Vlad Seryakov <seryakov@users.sf.net>

	* nsd/nsd.h:
	* nsd/nsconf.c:
	* nsd/sched.c: Added new config parameter: schedsperthread.